# rust-email-client

./: .gitignore  Cargo.toml  README.md
src/: config.rs  imap_client.rs  main.rs  smtp_client.rs  ui.rs
src/config/: mod.rs  models.rs
src/imap/: client.rs  mod.rs  models.rs  parser.rs
src/smtp/: client.rs  mod.rs
src/ui/: mod.rs
